--- a/_posts/2015-05-04-stormy.md
+++ b/_posts/2015-05-04-stormy.md
@@ -1,15 +1,9 @@
-
-
 ---
 layout: post
-title: "Church, state and billionaires"
-tags: infrastucture
+title: "nice customs curtsy to great kings"
+tags: bling
 ---
 
-> But this, too, was a minor threat. Langone was simply threatening to withhold money. Now, as the pope prepares a major encyclical on climate change, to be released this summer, the billionaires are spending a great deal of their money in a direct assault on him. They are calling in their chits, their kept scientists, their rigged conferences, their sycophantic beneficiaries, their bought publicists to discredit words of the pope that have not even been issued: “He would do his flock and the world a disservice by putting his moral authority behind the United Nations’ unscientific agenda on the climate,” they say. They do not know exactly what the pope is going to say in his forthcoming encyclical on preserving God’s creation, but they know what he will not say. He will not deny that the poor suffer from actions that despoil the earth. Everything he has said and done so far shows that Francis always stands for the poor.
+> all canons of reputability and decency, and all standards of consumption, are traced back by insensible gradations to the usages and habits of thought of the highest social and pecuniary class—the wealthy leisure class.
 
-Gary Wills
-
-[NYRB](#)z
-
-[NYRB](#): http://bit.ly/1I6vdI0
+Thorstein Veblen, *Theory of the Leisure Class*
