correct format to 2015-05-05-jim-crow.md

--- a/_posts/2015-05-05-jim-crow.md
+++ b/_posts/2015-05-05-jim-crow.md
@@ -6,6 +6,6 @@ tags: politics
 
 > Although the United States accounts for about 5 percent of the world’s population, it houses nearly 25 percent of the world’s prison population.
 
-[Mass Incarceration -- The Silence of the Judges by Jed S. Rakoff | The New York Review of Books]
+[Hon.Jed S. Rakoff]
 
-[Mass Incarceration -- The Silence of the Judges by Jed S. Rakoff | The New York Review of Books]: http://bit.ly/1GY7Te7
+[Hon.Jed S. Rakoff]: http://bit.ly/1GY7Te7
