--- a/_posts/2015-05-05-boomers.md
+++ b/_posts/2015-05-05-boomers.md
@@ -11,7 +11,8 @@ tags: politics, journalism
 
 [The Wall Street Journal] (2015-03-16) (*paywalled*) by [Zusha Elinson], quoted by the [American Pharmacists Association]. This [graphic] (reproduced below) from the article illustrates the claims made in the headline and extract.
 
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers1.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers1.png){: .center-image }
+
 
 ## Stirring the Teacup to Make a Tempest
 
@@ -23,11 +24,13 @@ As defined in the article, boomers were born from 1946 to 1964. We mostly gradua
 
 Let’s begin with the claim in the graphic that *the rate for drug arrests for older adults (45-64) has increased dramatically as boomers have aged*
 
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers2.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers2.png){: .center-image }
+
 
 *Compared to What?* and *What Was Happening?* are two unanswered questions. From the [Bureau of Justice Statistics] we have answers.
 
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers3.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers3.png){: .center-image }
+
 
 First, the rates of drug arrests for **every** age group went up
 
@@ -47,7 +50,8 @@ So much for drug arrests as support for the supposition that boomer countercultu
 
 Boomers were druggies in their senior years of high school.
 
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers4.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers4.png){: .center-image }
+
 
 The cited source
 
@@ -61,34 +65,40 @@ puts things in better perspective.
 
 The [Substance Abuse and Mental Health Services Administration] gives this view
 
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers5.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers5.png){: .center-image }
+
 Unsurprisingly, drug use goes down with age. There is a story about the difference between boomers and their immediate precedessors, but the story’s illustration points us toward the distant past
 
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers6.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers6.png){: .center-image }
+
 
 to show boomers as *a generation with a prediliction for drugs.*
 
 A better question is **what’s happening now?**
 
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers7.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers7.png){: .center-image }
+
 [2012 National Survey on Drug Use and Health]
 
 Boomers toke. Younger boomers toke more than older boomers. Leading edge boomers were fairly steady in their 2002-2012 intake. *And guess who’s playing catch-up?* The immediate pre-boomers. (In the single digits, in all cases.)
 
 From the same source
 
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers8.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers8.png){: .center-image }
+
 Nonmedical use of prescription drugs (basically painkillers and seditives) show a similar pattern, with the leading edge boomers converging on their slightly older cousins.
 
 Cocaine, heroin, hallucigens and inhalents are also covered, but account for very little of the total usage of illicit drugs.
 
 ## Bucket’s Got a Hole in It
 The summary and graphic in the story give the most prominence to a sharp rise in drug overdose rates for the 45-64 year old group.
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers9.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers9.png){: .center-image }
+
 The first thing to notice is the use of overlapping categories: the red line for 45-64 and the black line for 55-74. Why? Cynically, it looks as if the tenor of the presentation is that whenever boomers join a line, rates shoot up. But if you look at the end points for the red and orange lines, there is no difference (less than 0.01 per 100,000) between the all-boomer and no-boomer groups. Also note that the boomers in the 70s had far lower OD rates than young adults since 2000.
 
 Once more, there is more useful data from the same agency as the article cites. [Chen, Hedegaard and Warner] provide this view into the important category of opioid overdose deaths
-![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers10.png)
+![](https://s3-us-west-2.amazonaws.com/careaga/2015-05-05-boomers10.png){: .center-image }
+
 
 The other class of drugs involved in overdose deaths is benzodiazapens (Valium(TM) and its decscendants), usually in conjunction with opioids. Although cocaine and heroin overdoses can lead to death, the low usage in the boomer age group is expected to be reflected in relatively low numbers of deaths, as well.
 
