--- a/_posts/2015-05-16-sobranie.md
+++ b/_posts/2015-05-16-sobranie.md
@@ -22,3 +22,4 @@ That in turn was but a waystation before I turned to the blend that would carry 
   
 This produced a smoke that was almost chewy, like a single-malt scotch. It was my many pipe a day companion until the time came that I entered a smoke free setting just when my self diected promise to give up the habit came due. Since that day, when Blessèd St. Ronald is said to have been working miracles, my chimney has been cold, save for the occasional cigar during the Clinton years.
  
+![](https://careaga.s3.amazonaws.com/technocrat.png){: .center-image }
