--- a/_posts/2015-11-27-yaml.md
+++ b/_posts/2015-11-27-yaml.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Hard but simple: parsing YAML files in Haskell
+title: Hard but simple -- parsing YAML files in Haskell
 tags: Haskell
 ---
 
