--- a/_posts/2016-01-20-jail.md
+++ b/_posts/2016-01-20-jail.md
@@ -25,7 +25,7 @@ To seize the moment or to shun the seeming danger
 Most of the time, however, we build walls to protect  
 Our tender, tenuous sense of self, the untenable   
 Illusion that at our address someone is home, has   
-Always lived there and always will, sovereign in our 
-No one like us uniqueness and our always been like that  
+Always lived there and always will, sovereign in our  
+No-one-like-us uniqueness and our always-been-like-that  
 As prisons go, the prisoner knows best how to lock away  
 The heart, mind, soul and growth otherwise flourishing  
