--- a/_posts/2017-07-01-SD2nd.md
+++ b/_posts/2017-07-01-SD2nd.md
@@ -149,6 +149,8 @@ From there, I decided to press westward along rural roads toward Omaha. With the
 
 Flying over this country is an exercise in geometric abstraction. Driving the interstate cuts through back yards. The rural highways pass the front yards, but the place remains of its own, tenacious and unwelcoming, suspended in time and place indefinitely.
 
+On to Omaha, KC, then southing and westing ad lib.
+
 ^[book]: http://amzn.to/2szF8C8
 
 
