--- a/_posts/2017-07-01-SD2nd.md
+++ b/_posts/2017-07-01-SD2nd.md
@@ -145,7 +145,7 @@ The second was open,
 
 and I stepped in, had a Negro Modelo (no local drafts) and listen to the ranchers who'd just finished haying a field order double Crown Royals and gossip about the other 70 people who lived in town, their fortunes and misfortunes, the price of beef, the weather and all the other data that determine economic life or death in this part of the world.
 
-From there, I decided to press westward along rural roads toward Omaha. With the last of my connectivity, I made a reservation in Winner, South Dakota (they got the train stop) and drove past fields of freshly mown and baled hay, thinking of Wallace Stegner's [book] *Beyond the Hundredth Meridian*, a cautionary tale of the battle in the 19th century between the science of John Wesley Powell, the one-armed topographer who mapped huge swaths of the West and the agricultural Babbits who were sure that the rain would follow the plow past the longitude where rainfall averages less than 20 inches per year. It didn't and you can see it by the almost complete lack of field crops as you proceed east. What few patches of corn you see will be knee high by the fourth of July, but only if you are 3-feet tall.
+From there, I decided to press eastward along rural roads toward Omaha. With the last of my connectivity, I made a reservation in Winner, South Dakota (they got the train stop) and drove past fields of freshly mown and baled hay, thinking of Wallace Stegner's ^[book] *Beyond the Hundredth Meridian*, a cautionary tale of the battle in the 19th century between the science of John Wesley Powell, the one-armed topographer who mapped huge swaths of the West and the agricultural Babbits who were sure that the rain would follow the plow past the longitude where rainfall averages less than 20 inches per year. It didn't and you can see it by the almost complete lack of field crops as you proceed east. What few patches of corn you see will be knee high by the fourth of July, but only if you are 3-feet tall.
 
 Flying over this country is an exercise in geometric abstraction. Driving the interstate cuts through back yards. The rural highways pass the front yards, but the place remains of its own, tenacious and unwelcoming, suspended in time and place indefinitely.
 
