--- a/_posts/2017-07-01-SD2nd.md
+++ b/_posts/2017-07-01-SD2nd.md
@@ -151,7 +151,7 @@ Flying over this country is an exercise in geometric abstraction. Driving the in
 
 On to Omaha, KC, then southing and westing ad lib.
 
-^[book]: http://amzn.to/2szF8C8
+[book]: http://amzn.to/2szF8C8
 
 
 
