--- a/_posts/2018-01-12-enough.md
+++ b/_posts/2018-01-12-enough.md
@@ -1,9 +1,3 @@
-Title:  Enough Trumprage Already!
-Author: Richard Careaga  
-Date:  2018-01-12  
-Keywords: politics
-Format: snippet
-
 Is there anything more to be heard from or learned about Trump that has the slightest chance of changing anyone's mind? Does he have to rape a schoolkid in the Rose Garden on live cable? Does Putin have to release (if it exists) the golden shower tape? Vivisect a puppy in the Press Room?
 
 I doubt it. His base may erode, disappointed in his failure to bring back the 50s. He may win over some who come down with neurological disorders. His craven enablers will fall away as they pull the rip cords on their golden parachutes (as many already have). He will continued to be propped up by the "I'll sign anything" marks who hope to dismantle the entire social safety net between now and the first week of 2019, when they will mostly be out of power.
@@ -20,23 +14,23 @@ Where we are arriving, quickly, is that our promises to allies are untrustworthy
 
 We are threatening to blow up the North American economy to get better deals from Canada and Mexico. Presumably, we will pay less for maple syrup and avocados and more for cars and car parts and they will pay more for HBO.
 
-NATO was founded "to keep the Americans in, the Russians out and the Germans down." The Americans remain (often in the same Wehrmacht bases they shot up 72 years ago), the Germans are calling the economic shots in Western Europe, the Russians are nibbling away at their western borders, the Brits finally woke up that without Empire they don't really like each other very much and are crawly back across the Channel like beaten horses. The **Danes** are rediscovering their ethnic based nationality. They were useful, those Soviets, in creating Camp Granada. Without them, it's just European power politics as usual with larger powers encroaching on smaller powers with ethnic enclaves. The Catalans want rid of Spain. If they succeed, the Basques, Galicians and perhaps the Andalusians will follow.
+NATO was founded "to keep the Americans in, the Russians out and the Germans down." The Americans remain (often in the same Wehrmacht bases they shot up 72 years ago), the Germans are calling the economic shots in Western Europe, the Russians are nibbling away at their western borders, the Brits finally woke up that without Empire they don't really like Europe very much and are crawly back across the Channel like beaten horses. The **Danes** are rediscovering their ethnic based nationality. They were useful, those Soviets, in creating Camp Granada. Without them, it's just European power politics as usual with larger powers encroaching on smaller powers with ethnic enclaves. The Catalans want rid of Spain. If they succeed, the Basques, Galicians and perhaps the Andalusians will follow.
 
 In Africa, we are waging influence on the cheap, with "military advisors" chasing micro-cells of terrorists and the French actually waging war. In the meantime, the Chinese are buying, building, and tapping a vast rural workforce, much the same way they did at home.
 
 In South America, the Japanese and Chinese are competing for resources and influences. Central America and much of Mexico have an economy based on our criminalizing of medical addiction as a criminal offense. China is extending influence throughout the Caribbean. We are walking away from engagement with that region's center, Cuba, leaving open another back door.
 
-In the Western Pacific, we are leaving Japan, South Korea and Taiwan wondering about whether the nuclear umbrella will ever be unfulred for their benefit. Austrailia and New Zealand are hoping to slide by unnoticed. China could restrain North Korea, if it wished, but it doesn't. Why?  Because it doesn't want to trigger mass an planned migration across the Yalu River (it's saving the Korean labor force for future deployment in place), and it's a convenient stick to poke in Trump's eye.
+In the Western Pacific, we are leaving Japan, South Korea and Taiwan wondering about whether the nuclear umbrella will ever be unfulred for their benefit. Austrailia and New Zealand are hoping to slide by unnoticed. China could restrain North Korea, if it wished, but it doesn't. Why?  Because it doesn't want to trigger mass an unplanned migration across the Yalu River (it's saving the Korean labor force for future deployment in place), and it's a convenient stick to poke in Trump's eye.
 
 In central Asia, we have displaced the Taliban from formal power in Afghanistan, but after more than 15 years, we still lack any notion of what constitutes victory. (After killing bin Laden, the Obama Administration would have done well to declare victory and vacate the region.) Pakistan has been money down an endless siphon. We've neglected to cultivate the next superpower, India.
 
-We've driven Turkey into the arms of Russia, giving them warm water access after three centuries of trying. We gave Russia a free hand to prop up Saddam and to return as a player in the mid-East since the days of the Assam Dam (the fact that you never heard of it indicates how long ago it was). We've rewarded Israel with the symbolic "Jeruselum capital" designation for nothing in return, other than to signal a free hand in blowing off the Palestinians. 
+We've driven Turkey into the arms of Russia, giving them warm water access after three centuries of trying. We gave Russia a free hand to prop up Assad and to return as a player in the mid-East for the first time since the days of the Assam Dam (the fact that you never heard of it indicates how long ago it was). We've rewarded Israel with the symbolic "Jeruselum capital" designation for nothing in return, other than to signal a free hand in blowing up the Palestinians. 
 
 We're butting heads with Iran in public, but in effect we are providing funding to Iraq to draw them in against the Saudis who pay us for arms. In the Great Sunni-Shia power struggle, we are not hedging our bets, we're looking for the betting window.
 
 These are all long-term trends simmering since the fall of the Berlin Wall, exacerbated or calmed under two Republican and two Democratic administrations that, at least, had rationales for their actions. They are coming to boil under a new administration that has competing rationales, all subject to contradiction by a commander-in-chief with the attention span of a gifted gnat.
 
-The United States deploys 11 carrier groups, each of which carries aircraft larger than all but a few nations in the world. We are highly skilled in operating those assets. We have become clueness in how to use them to advance goals of the United States in a fluid and unstable world.
+The United States deploys 11 carrier groups, each of which carries numbers of aircraft larger than all but a few nations in the world. We are highly skilled in operating those assets. We have become clueness in how to use them to advance goals of the United States in a fluid and unstable world.
 
 This presages a chaotic decline in US influence and security that will not recover until we have a coherent foreign policy consensus to replace the one that has been on autopilot since the Kennan Telegram.
 
